Fixed table alignment

--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ body {
 #data-table {
 	padding-top: 2em;
 	width: 80%;
+	margin-left: 5em;
 }
 
 /*.forms {
